add social media links to html template

--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -10,32 +10,54 @@
         <a href="" class="get-in-touch-btn">GET IN TOUCH</a>
     </div>
 
-    <div class="under-nav">
-        <div class="logo-div">
-            <img src="/assets/shared/desktop/logo-light.png" alt="Designo Logo">
+    <div class="footer-div">
+        <div class="under-nav">
+            <div class="logo-div">
+                <img src="/assets/shared/desktop/logo-light.png" alt="Designo Logo">
+            </div>
+            <div class="links-div">
+                <ul class="links-list">
+                    <a href="" class="links">OUR COMPANY</a>
+                    <a href="" class="links">LOCATIONS</a>
+                    <a href="" class="links">CONTACT</a>
+                </ul>
+            </div>
         </div>
-        <div class="links-div">
-            <ul class="links-list">
-                <a href="" class="links">OUR COMPANY</a>
-                <a href="" class="links">LOCATIONS</a>
-                <a href="" class="links">CONTACT</a>
-            </ul>
+        <div class="br"></div>
+        <div class="company-info">
+            <div class="address-div">
+                <p class="office-info">
+                <span><b>Designo Central Office</b></span> 
+                <span>3886 Wellington Street</span>
+                <span>Toronto, Ontario M9C 3J5</span> 
+                </p>
+            </div>
+            <div class="office-contact">
+                <p class="office-info">
+                <span>Contact Us (Central Office)</span>
+                <span> P:+1 253-863-8967</span> 
+                <span>M : contact&#64;designo.co</span>
+                    
+                </p>
+            </div>
+            <div class="social-media-div">
+                <div class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-facebook.svg" alt="" class="social-media-img">
+                </div>
+                <div class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-youtube.svg" alt="" class="social-media-img">
+                </div>
+                <div class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-twitter.svg" alt="" class="social-media-img">
+                </div>
+                <div class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-pinterest.svg" alt="" class="social-media-img">
+                </div>
+                <div class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-instagram.svg" alt="" class="social-media-img">
+                </div>
+            </div>
         </div>
     </div>
-    <div class="company-info">
-        <div class="address-div">
-            <p class="office-info">
-                <b>Designo Central Office</b>
-                3886 Wellington Street
-                Toronto, Ontario M9C 3J5
-            </p>
-        </div>
-        <div class="office-contact">
-            <p>
-                Contact Us (Central Office)P : +1 253-863-8967
-                M : contactdesigno.co
-            </p>
-        </div>
-        <!--Add social media icons-->
-    </div>
+    
 </footer>
