add social media anchors

--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -41,21 +41,21 @@
                 </p>
             </div>
             <div class="social-media-div">
-                <div class="social-media-link">
-                    <img src="/assets/shared/desktop/icon-facebook.svg" alt="" class="social-media-img">
-                </div>
-                <div class="social-media-link">
-                    <img src="/assets/shared/desktop/icon-youtube.svg" alt="" class="social-media-img">
-                </div>
-                <div class="social-media-link">
-                    <img src="/assets/shared/desktop/icon-twitter.svg" alt="" class="social-media-img">
-                </div>
-                <div class="social-media-link">
-                    <img src="/assets/shared/desktop/icon-pinterest.svg" alt="" class="social-media-img">
-                </div>
-                <div class="social-media-link">
-                    <img src="/assets/shared/desktop/icon-instagram.svg" alt="" class="social-media-img">
-                </div>
+                <a class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-facebook.svg" alt="Facebook icon" class="social-media-img">
+                </a>
+                <a class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-youtube.svg" alt="Youtube icon" class="social-media-img">
+                </a>
+                <a class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-twitter.svg" alt="Twitter icon" class="social-media-img">
+                </a>
+                <a class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest icon" class="social-media-img">
+                </a>
+                <a class="social-media-link">
+                    <img src="/assets/shared/desktop/icon-instagram.svg" alt="Instagram icon" class="social-media-img">
+                </a>
             </div>
         </div>
     </div>
