add hamburger menu

--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -2,6 +2,10 @@
     <div class="logo-div">
         <img src="/assets/shared/desktop/logo-dark.png" alt="Designo Logo">
     </div>
+
+    <div class="hamburger-div">
+        <img src="assets/shared/mobile/icon-hamburger.svg" alt="icon hamburger">
+    </div>
     <div class="links-div">
         <ul class="links-list">
             <a href="" class="links">OUR COMPANY</a>
