add flex to links

--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -209,5 +209,17 @@ footer{
     .footer-div{
         display: flex;
         flex-direction: column;
+        
+        
+    }
+
+    .under-nav{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .links-div{
+        flex-direction: column;
+        height: 100px;
     }
 }
