--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -2,18 +2,14 @@
 
 footer{
     background-color: $black;
-    bottom:0px;
     width: 100%;
-    bottom: 0px;
     height: 393px;
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 }
 
 .footer-div{
@@ -205,12 +201,16 @@ footer{
 
 @media(width < 700px){
 
+    footer{
+        height: 815px;
+    }
     //fix this
     .footer-div{
         display: flex;
         flex-direction: column;
-        
-        
+        height: 100%;
+        justify-content: center;
+        align-items: center;
     }
 
     .under-nav{
@@ -220,6 +220,15 @@ footer{
 
     .links-div{
         flex-direction: column;
+    }
+
+    .links-list{
         height: 100px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .company-info{
+        flex-direction: column;
     }
 }
