--- a/src/components/header/header.component.scss
+++ b/src/components/header/header.component.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 50px 90px 0 90px;
+    margin-bottom: 50px;
 }
 
 .hamburger-div{
