--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-  <app-header></app-header>
-  <div class="content">
+  <div class="container">
+    <app-header></app-header>
+    <div class="content">
+      
+    </div>
+    <app-footer></app-footer>
   </div>
-  <app-footer></app-footer>
+  
 
 
