--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,4 +21,8 @@ $font:  "Jost", serif;
 
 body{
     height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    min-height: 100vh;
 }
