--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -108,6 +108,7 @@ footer{
     justify-content: space-between;
     align-items: center;
     padding: 5rem;
+    clear: both;
 
     .info{
         display: flex;
@@ -206,38 +207,80 @@ footer{
 @media(width < 700px){
 
     footer{
-        height: 60%;
+        height: 70%;
     }
     //fix this
     .footer-div{
         display: flex;
         flex-direction: column;
         height: 100%;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
     }
 
     .under-nav{
         display: flex;
         flex-direction: column;
+        justify-content: start;
+        align-items: center;
+        margin-top: 5rem;
+        margin-bottom: 1rem;
+        height: 30%;
+
+
+        .logo-div{
+            height: 24px;
+            width: 194px;
+            margin-bottom: 4rem;
+
+            img{
+                width: 100%;
+            }
+        }
+    }
+
+    .br{
+        position: absolute;
+        top: 17%;
     }
 
     .links-div{
         flex-direction: column;
+        height: 70%;
     }
 
     .links-list{
-        height: 100px;
+        height: 100%;
         display: flex;
         flex-direction: column;
     }
 
     .company-info{
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
-    .contact-div{
-        padding: 1rem;
+    .address-div{
+        margin-bottom: 3rem;
+        margin-top: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
+    .office-contact{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+
+    .social-media-div{
+        width: 70%;
+        position: absolute;
+        bottom: 15%;
+        left: 15%;
     }
 }
