add home main section and fix footer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,6 @@
     flex-direction: column;
 }
 .content{
-    background-color: aquamarine;
-    height: 0px;
+    width: 100%;
+    padding: 30%;
 }
