--- a/src/components/main-section/main-section.component.html
+++ b/src/components/main-section/main-section.component.html
@@ -1,1 +1,11 @@
-<p>main-section works!</p>
+<section>
+    <div class="about-main">
+        <h1>Award-winning custom designs and digital branding solutions</h1>
+        <p class="about-main-paragraph">
+            With over 10 years in the industry, we are experienced in creating fully responsive websites, 
+            app design, and engaging brand experiences. Find out more about our services.
+        </p>
+        <a href="">LEARN MORE</a>
+        <img src="assets/home/desktop/bg-pattern-call-to-action.svg" alt="" class="about-main-img">
+    </div>
+</section>
