--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
   <div class="container">
     <app-header></app-header>
     <div class="content">
-      
+      <main-section></main-section>
     </div>
     <app-footer></app-footer>
   </div>
