--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,9 +20,10 @@ $font:  "Jost", serif;
 }
 
 body{
-    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    min-height: 100vh;
 }
