--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
 .container{
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 .content{
+    flex: 1;
     width: 100%;
-    padding: 30%;
+    padding: 0 15rem 0 15rem;
 }
