--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -132,18 +132,7 @@ footer{
     }
 
     .get-in-touch-btn{
-        height: 56px;
-        width: 152px;
-        background-color: $white;
-        border-radius: 10px;
-        text-decoration: none;
-        color: $black;
-        font-family: $font;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 500;
-        transition: .5s ease-in;
+        @extend %btn;
     }
 
     .get-in-touch-btn:hover{
