--- a/src/components/main-section/main-section.component.html
+++ b/src/components/main-section/main-section.component.html
@@ -5,7 +5,7 @@
             With over 10 years in the industry, we are experienced in creating fully responsive websites, 
             app design, and engaging brand experiences. Find out more about our services.
         </p>
-        <a href="">LEARN MORE</a>
-        <img src="assets/home/desktop/bg-pattern-call-to-action.svg" alt="" class="about-main-img">
+        <a href="" class="about-main-anchor">LEARN MORE</a>
     </div>
+    <img src="assets/home/desktop/image-hero-phone.png" alt="" class="about-main-img">
 </section>
