--- a/src/components/main-section/main-section.component.scss
+++ b/src/components/main-section/main-section.component.scss
@@ -1,5 +1,38 @@
+@import "../../styles.scss";
+
 section{
     width: 100%;
-    background-color: bisque;
+    background-color: $peach;
     height: 640px;
+    border-radius: 15px;
+    position: relative;
+    overflow: hidden;
+    font-family: $font;
+    display: flex;
+    color: $white;
+}
+
+.about-main{
+    width: 550px;
+}
+
+h1{
+    font-size: 50px;
+    font-weight: 500;
+}
+
+.about-main-paragraph{
+    font-size: 20px;
+}
+
+.about-main-anchor{
+    @extend %btn;
+}
+
+.about-main-img{
+    position: absolute;
+    clear: both;
+    height: 873px;
+    right: 0;
+    top: 0;
 }
