--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -156,7 +156,7 @@ footer{
     }
 }
 
-@media(width < 1200px){
+@media(width <= 1200px){
     .contact-div{
         height: 350px;
         flex-direction: column;
@@ -190,7 +190,7 @@ footer{
     }
 }
 
-@media(width < 700px){
+@media(width <= 700px){
 
     footer{
         height: 70%;
