--- a/src/components/main-section/main-section.component.scss
+++ b/src/components/main-section/main-section.component.scss
@@ -83,6 +83,11 @@ h1{
 
 @media(width <= 1200px){
 
+    .about-main-img{
+        left: 50%;
+        transform: translate(-50%, 40%);
+        
+    }
 }
 
 
