add design and team sections

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
     <app-header></app-header>
     <div class="content">
       <main-section></main-section>
+      <design-section></design-section>
+      <team-section></team-section>
     </div>
     <app-footer></app-footer>
   </div>
