--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,9 +4,12 @@
     min-height: 100vh;
 }
 .content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     flex: 1;
     width: 100%;
-    padding: 0 18rem 0 18rem;
 }
 
 @media(width <= 1500px){
