--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,7 @@
   <div class="container">
     <app-header></app-header>
     <div class="content">
-      <main-section></main-section>
-      <design-section></design-section>
-      <team-section></team-section>
+      <router-outlet></router-outlet>
     </div>
     <app-footer></app-footer>
   </div>
