add router link to the nav component

--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -8,7 +8,8 @@
     </div>
     <div class="links-div">
         <ul class="links-list">
-            <a href="" class="links">OUR COMPANY</a>
+            <!--Fix the routing link-->
+            <a routerLink="home" class="links">OUR COMPANY</a>
             <a href="" class="links">LOCATIONS</a>
             <a href="" class="links">CONTACT</a>
         </ul>
