--- a/src/components/company-history/company-history.component.scss
+++ b/src/components/company-history/company-history.component.scss
@@ -30,5 +30,10 @@ section{
 }
 
 .company-history-img{
-    height: 100%;
+    height: 480px;
+    
+    img{
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+    }
 }
