--- a/src/components/about-us/about-us.component.html
+++ b/src/components/about-us/about-us.component.html
@@ -1,1 +1,75 @@
-<company-history></company-history>
+<main>
+    <div class="company-history">
+        <div class="company-history-info">
+            <h2 class="company-history-title">About Us</h2>
+            <p class="company-history-paragraph">
+                Founded in 2010, we are a creative agency that produces lasting results for our clients. 
+                We’ve partnered with many startups, corporations, and nonprofits alike to craft designs that make real impact. 
+                We’re always looking forward to creating brands, products, and digital experiences that connect with our clients’ audiences.
+            </p>
+        </div>
+        <div class="company-history-img">
+            <img src="assets/about/desktop/image-about-hero.jpg" alt="People on a desk">
+        </div>
+    </div>
+    <div class="who-we-are">
+        <div class="who-we-are-img-div">
+            <img src="assets/about/desktop/image-world-class-talent.jpg" alt="women looking a board">
+        </div>
+        <div class="who-we-are-info">
+            <h2 class="who-we-are-title">World-class talent</h2>
+            <p class="who-we-are-paragraph">
+                We are a crew of strategists, problem-solvers, and technologists. 
+                Every design is thoughtfully crafted from concept to launch, ensuring success in its given market. 
+                We are constantly updating our skills in a myriad of platforms.   
+                <br>
+                <br>
+                Our team is multi-disciplinary and we are not merely interested in form — content and meaning 
+                are just as important. We give great importance to craftsmanship, service, and prompt delivery. 
+                Clients have always been impressed with our high-quality outcomes that encapsulates their brand’s story and mission.
+            </p>
+        </div>
+    </div>
+    <div class="locations-div">
+        <div class="location">
+            <div class="location-img-div">
+                <img src="assets/shared/desktop/illustration-canada.svg" alt="Canadian buildings">      
+            </div>
+            <h3>CANADA</h3>
+            <a href="" class="location-anchor">SEE LOCATION</a>
+        </div>
+        <div class="location">
+            <div class="location-img-div">
+                <img src="assets/shared/desktop/illustration-australia.svg" alt="Australian buildings">
+                
+            </div>
+            <h3>AUSTRALIA</h3>
+            <a href="" class="location-anchor">SEE LOCATION</a>
+        </div>
+        <div class="location">
+            <div class="location-img-div">
+                <img src="assets/shared/desktop/illustration-united-kingdom.svg" alt="London bridge">
+            </div>
+            <h3>UNITED KINGDOM</h3>
+            <a href="" class="location-anchor">SEE LOCATION</a>
+        </div>
+    </div>
+    <div class="real-deal-div">
+        <div class="real-deal-info">
+            <h2 class="real-deal-title">The real deal</h2>
+            <p class="real-deal-paragraph">
+                As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own. 
+                Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every opportunity. 
+                We make design and technology more accessible and give you tools to measure success.
+                <br>
+                <br>
+                We are visual storytellers in appealing and captivating ways. 
+                By combining business and marketing strategies, we inspire audiences to take action and drive real results.
+            </p>
+        </div>
+        <div class="real-deal-img-div">
+            <img src="assets/about/desktop/image-real-deal.jpg" alt="Woman putting image on board">
+        </div>
+    </div>
+</main>
+
