--- a/src/components/about-us/about-us.component.scss
+++ b/src/components/about-us/about-us.component.scss
@@ -1,1 +1,269 @@
+@import "../../styles.scss";
 
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.company-history{
+    width: 1111px;
+    background-color: $peach;
+    display: flex;
+    background-color: url(../../../public/assets/about/desktop/bg-pattern-hero-about-desktop.svg);
+    font-family: $font;
+    justify-content: space-between;
+    border-radius: 15px;
+    margin-bottom: 8rem;
+}
+
+.company-history-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 42%;
+    margin-left: 6rem;
+}
+
+.company-history-title{
+    font-size: 48px;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    color: $white;
+}
+
+.company-history-paragraph{
+    color: $white;
+}
+
+.company-history-img{
+    height: 480px;
+    
+    img{
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+    }
+}
+
+.who-we-are{
+    @extend %about-section;
+}
+
+.who-we-are-img-div{
+    height: 640px;
+    
+    img{
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+    }
+}
+
+.who-we-are-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.who-we-are-title{
+    @extend %about-section-subtitle;
+}
+
+.who-we-are-paragraph{
+    width: 80%;
+}
+
+.locations-div{
+    width: 1111px;
+    display: flex;
+    justify-content: space-around;
+    background-image: url(../../../public/assets/shared/desktop/bg-pattern-small-circle.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    font-family: $font;
+    margin-bottom: 4rem;
+}
+
+.location{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 4rem;
+}
+
+h3{
+    margin-bottom: 3rem;
+    font-weight: 400;
+}
+
+.location-anchor{
+    @extend %btn;
+    background-color: $peach;
+    color: $white;
+}
+
+.location-anchor:hover{
+    background-color: $light-peach;
+}
+
+.real-deal-div{
+    @extend %about-section;
+}
+
+.real-deal-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.real-deal-title{
+    @extend %about-section-subtitle;
+}
+
+.real-deal-paragraph{
+    width: 80%;
+}
+
+.real-deal-img-div{
+    height: 640px;
+    
+    img{
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+    }
+}
+
+
+//Media queries 
+
+@media(width <= 1200px){
+    .company-history{
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        align-items: center;
+        width: 690px;
+    }
+
+    .company-history-title{
+        font-size: 48px;
+        font-weight: 500;
+        text-align: center;
+        margin-bottom: 2rem;
+        margin-top: 2rem;
+    }
+
+    .company-history-info{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 60%;
+        margin-left: 0;
+        margin-bottom: 2rem;
+    }
+
+    .company-history-img{
+        height: auto;
+        
+        img{
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 15px;
+            border-bottom-left-radius: 15px;
+            height: auto;
+            width: 100%;
+        }
+    }
+
+    .who-we-are{
+        width: 690px;
+        flex-direction: column;
+    }
+
+    .who-we-are-img-div{
+        height: 320px;
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+
+        img{
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            border-bottom-left-radius: 0;
+            height: auto;
+            width: 100%;
+            position: absolute;
+            top: -130%;
+        }
+    }
+
+    .who-we-are-title{
+        margin-top: 4rem;
+    }
+
+    .who-we-are-paragraph{
+        margin-bottom: 4rem;
+    }
+
+    .locations-div{
+        width: 690px;
+        flex-direction: column;
+    }
+
+    .real-deal-div{
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        align-items: center;
+        width: 690px;
+    }
+
+    .real-deal-img-div{
+        height: auto;
+        
+        img{
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 15px;
+            border-bottom-left-radius: 15px;
+            height: auto;
+            width: 100%;
+        }
+    }
+
+    .real-deal-paragraph{
+        margin-bottom: 4rem;
+    }
+}
+
+@media(width <= 700px){
+
+    .company-history{
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+    }
+
+    .who-we-are{
+        width: 90%;
+    }
+
+    .who-we-are-img-div{
+        width: 100%;
+        
+        img{
+            top: -50%;
+        }
+    }
+    .locations-div{
+        width: 90%;
+
+    }
+
+    .real-deal-div{
+        width: 90%;
+    }
+    
+}
