--- a/src/components/about-us/about-us.component.html
+++ b/src/components/about-us/about-us.component.html
@@ -30,30 +30,7 @@
             </p>
         </div>
     </div>
-    <div class="locations-div">
-        <div class="location">
-            <div class="location-img-div">
-                <img src="assets/shared/desktop/illustration-canada.svg" alt="Canadian buildings">      
-            </div>
-            <h3>CANADA</h3>
-            <a href="" class="location-anchor">SEE LOCATION</a>
-        </div>
-        <div class="location">
-            <div class="location-img-div">
-                <img src="assets/shared/desktop/illustration-australia.svg" alt="Australian buildings">
-                
-            </div>
-            <h3>AUSTRALIA</h3>
-            <a href="" class="location-anchor">SEE LOCATION</a>
-        </div>
-        <div class="location">
-            <div class="location-img-div">
-                <img src="assets/shared/desktop/illustration-united-kingdom.svg" alt="London bridge">
-            </div>
-            <h3>UNITED KINGDOM</h3>
-            <a href="" class="location-anchor">SEE LOCATION</a>
-        </div>
-    </div>
+    <locations-nav></locations-nav>
     <div class="real-deal-div">
         <div class="real-deal-info">
             <h2 class="real-deal-title">The real deal</h2>
