add contact html semantic

--- a/src/components/contact-us/contact-us.component.html
+++ b/src/components/contact-us/contact-us.component.html
@@ -1,1 +1,20 @@
-<p>contact-us works!</p>
+<section>
+    <div class="contact">
+        <div class="contact info">
+            <h2>Contact Us</h2>
+            <p class="contact-info-paragraph">
+                Ready to take it to the next level? Let’s talk about your project or idea 
+                and find out how we can help your business grow. If you are looking for unique 
+                digital experiences that’s relatable to your users, drop us a line.
+            </p>
+        </div>
+        <form action="#">
+            <input type="text" class="form-input">
+            <input type="text" class="form-input">
+            <input type="text" class="form-input">
+            <textarea name="" id=""></textarea>
+            <input type="submit" value="SUBMIT">
+        </form>
+    </div>
+    <locations-nav></locations-nav>
+</section>
