--- a/src/components/locations/locations.component.html
+++ b/src/components/locations/locations.component.html
@@ -1,3 +1,76 @@
 <section>
-    
+    <div class="location-div">
+        <div class="location-info">
+            <h2>Canada</h2>
+            <div class="location-office">
+                <p class="location-office-paragraph">
+                    Designo Central Office
+                    <br>
+                    3886 Wellington Street
+                    <br>
+                    Toronto, Ontario M9C 3J5
+                </p>
+            </div>
+            <div class="location-contact">
+                <p class="location-contact-paragraph">
+                    Contact 
+                    <br>
+                    P : +1 253-863-8967
+                    <br>
+                    M : contact&#64; designo.com
+                </p>
+            </div>
+        </div>
+        <div class="location-map">
+            <img src="assets/locations/desktop/image-map-canada.png" alt="street map of location">
+        </div>
+    </div>
+    <div class="location-div reverse">
+        <div class="location-info">
+            <h2>Australia</h2>
+            <div class="location-office">
+                <p class="location-office-paragraph">
+                    Designo AU Office
+                    <br>
+                    19 Balonne Street
+                    <br>
+                    New South Wales 2443
+                </p>
+            </div>
+            <div class="location-contact">
+                <p class="location-contact-paragraph">
+                    Contact 
+                    P : (02) 6720 9092
+                    M : contact&#64;designo.au
+                </p>
+            </div>
+        </div>
+        <div class="location-map">
+            <img src="assets/locations/desktop/image-map-australia.png" alt="street map of location">
+        </div>
+    </div>
+    <div class="location-div">
+        <div class="location-info">
+            <h2>United Kingdom</h2>
+            <div class="location-office">
+                <p class="location-office-paragraph">
+                    Designo UK Office
+                    <br>
+                    13  Colorado Way
+                    <br>
+                    Rhyd-y-fro SA8 9GA
+                </p>
+            </div>
+            <div class="location-contact">
+                <p class="location-contact-paragraph">
+                    Contact 
+                    P : 078 3115 1400
+                    M : contact&#64;designo.uk
+                </p>
+            </div>
+        </div>
+        <div class="location-map">
+            <img src="assets/locations/desktop/image-map-united-kingdom.png" alt="street map of location">
+        </div>
+    </div>
 </section>
