--- a/src/components/locations/locations.component.html
+++ b/src/components/locations/locations.component.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="location-div">
+    <div class="location-div location-canada">
         <div class="location-info">
             <h2>Canada</h2>
             <div class="location-office">
@@ -25,7 +25,7 @@
             <img src="assets/locations/desktop/image-map-canada.png" alt="street map of location">
         </div>
     </div>
-    <div class="location-div reverse">
+    <div class="location-div location-australia">
         <div class="location-info">
             <h2>Australia</h2>
             <div class="location-office">
@@ -49,7 +49,7 @@
             <img src="assets/locations/desktop/image-map-australia.png" alt="street map of location">
         </div>
     </div>
-    <div class="location-div">
+    <div class="location-div location-united-kingdom">
         <div class="location-info">
             <h2>United Kingdom</h2>
             <div class="location-office">
