--- a/src/components/locations/locations.component.scss
+++ b/src/components/locations/locations.component.scss
@@ -5,12 +5,34 @@ section{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, 1fr);
+    gap: 2rem;
     width: 1111px;
     height: 1042px;
+
 }
 
 .location-div{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(1, 1fr);
+    gap: 2rem;
+
+}
+
+.location-info{
+    grid-column: 1/ 3;
+    background-color: $light-grey;
+    border-radius: 20px;
+
+}
+
+.location-map{
+    grid-column-start: 3;
+    border-radius: 20px;
+
+    img{
+        border-radius: 20px;
+        height: 100%;
+        width: 100%;
+    }
 }
