fix grid template in locations

--- a/src/components/locations/locations.component.html
+++ b/src/components/locations/locations.component.html
@@ -25,8 +25,8 @@
             <img src="assets/locations/desktop/image-map-canada.png" alt="street map of location">
         </div>
     </div>
-    <div class="location-div location-australia">
-        <div class="location-info">
+    <div class="location-div">
+        <div class="location-info location-australia">
             <h2>Australia</h2>
             <div class="location-office">
                 <p class="location-office-paragraph">
@@ -45,7 +45,7 @@
                 </p>
             </div>
         </div>
-        <div class="location-map">
+        <div class="location-map location-australia-img">
             <img src="assets/locations/desktop/image-map-australia.png" alt="street map of location">
         </div>
     </div>
