--- a/src/components/locations/locations.component.scss
+++ b/src/components/locations/locations.component.scss
@@ -26,6 +26,16 @@ section{
 
 }
 
+.location-australia-img{
+    grid-column: 1 !important;
+    grid-row: 1/3;
+}
+
+.location-australia{
+    grid-column: 2/4;
+    grid-row: 1/3;
+}
+
 .location-map{
     grid-column-start: 3;
     border-radius: 20px;
