add contact info styles

--- a/src/components/contact-us/contact-us.component.html
+++ b/src/components/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
 <section>
     <div class="contact">
-        <div class="contact info">
+        <div class="contact-info">
             <h2>Contact Us</h2>
             <p class="contact-info-paragraph">
                 Ready to take it to the next level? Let’s talk about your project or idea 
@@ -8,7 +8,7 @@
                 digital experiences that’s relatable to your users, drop us a line.
             </p>
         </div>
-        <form action="#">
+        <form action="#" class="contact-form">
             <input type="text" class="form-input">
             <input type="text" class="form-input">
             <input type="text" class="form-input">
