remove grid from location info

--- a/src/components/locations/locations.component.html
+++ b/src/components/locations/locations.component.html
@@ -25,28 +25,30 @@
             <img src="assets/locations/desktop/image-map-canada.png" alt="street map of location">
         </div>
     </div>
-    <div class="location-div">
-        <div class="location-info location-australia">
-            <h2>Australia</h2>
+    <div class="location-div location-canada">
+        <div class="location-info">
+            <h2>Canada</h2>
             <div class="location-office">
                 <p class="location-office-paragraph">
-                    Designo AU Office
+                    Designo Central Office
                     <br>
-                    19 Balonne Street
+                    3886 Wellington Street
                     <br>
-                    New South Wales 2443
+                    Toronto, Ontario M9C 3J5
                 </p>
             </div>
             <div class="location-contact">
                 <p class="location-contact-paragraph">
                     Contact 
-                    P : (02) 6720 9092
-                    M : contact&#64;designo.au
+                    <br>
+                    P : +1 253-863-8967
+                    <br>
+                    M : contact&#64; designo.com
                 </p>
             </div>
         </div>
-        <div class="location-map location-australia-img">
-            <img src="assets/locations/desktop/image-map-australia.png" alt="street map of location">
+        <div class="location-map">
+            <img src="assets/locations/desktop/image-map-canada.png" alt="street map of location">
         </div>
     </div>
     <div class="location-div location-united-kingdom">
