--- a/src/components/contact-us/contact-us.component.html
+++ b/src/components/contact-us/contact-us.component.html
@@ -9,10 +9,18 @@
             </p>
         </div>
         <form action="#" class="contact-form">
-            <input type="text" class="form-input">
-            <input type="text" class="form-input">
-            <input type="text" class="form-input">
-            <textarea name="" id=""></textarea>
+            <div class="input-div">
+                <input type="text" class="form-input">
+            </div>
+            <div class="input-div">
+                <input type="text" class="form-input">
+            </div>
+            <div class="input-div">
+                <input type="text" class="form-input">
+            </div>
+            <div class="input-div">
+                <textarea name="" id=""></textarea>
+            </div>
             <input type="submit" value="SUBMIT">
         </form>
     </div>
