--- a/src/components/contact-us/contact-us.component.html
+++ b/src/components/contact-us/contact-us.component.html
@@ -10,19 +10,23 @@
         </div>
         <form action="#" class="contact-form">
             <div class="input-div">
-                <input type="text" class="form-input">
+                <label for="name" class="label">Name</label>
+                <input type="text" name="name" class="form-input">
             </div>
             <div class="input-div">
-                <input type="text" class="form-input">
+                <label for="email" class="label">Email Address</label>
+                <input type="text" name="email" class="form-input">
             </div>
             <div class="input-div">
-                <input type="text" class="form-input">
+                <label for="phone" class="label">Phone Number</label>
+                <input type="text" name="phone" class="form-input">
             </div>
             <div class="input-div">
-                <textarea name="" id=""></textarea>
+                <label for="message" class="label">Your Message</label>
+                <textarea name="message" id="" class="form-input"></textarea>
             </div>
-            <input type="submit" value="SUBMIT">
+            <input type="submit" class="submit" value="SUBMIT">
         </form>
     </div>
-    <locations-nav></locations-nav>
+    <locations-nav></locations-nav> 
 </section>
