--- a/src/components/contact-us/contact-us.component.scss
+++ b/src/components/contact-us/contact-us.component.scss
@@ -10,10 +10,11 @@ section{
     height: 480px;
     background-color: $peach;
     display: flex;
+    justify-content: space-between;
     background-image: url(../../../public/assets/contact/desktop/bg-pattern-hero-desktop.svg);
     background-repeat: no-repeat;
     background-position:top left;
-    padding: 0 7rem 0 7rem;
+    padding: 0 6rem 0 6rem;
 }
 
 .contact-info{
@@ -37,8 +38,38 @@ h2{
 
 .contact-form{
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 3rem 0 3rem;
 }
 
-.contact-form{
-    
+.input-div{
+    height: 50px;
+    width: 100%;
+    margin-bottom: 2rem;
+    opacity: 0.7;
+}
+
+.input-div:hover, .form-input,  label{
+    opacity: 1;
+    cursor: pointer;
+}
+
+.form-input{
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid $white;
+    width: 100%;
+    outline: none;
+    padding: 10px;
+}
+
+label{
+    display: block;
+    color: $white;
+}
+
+.submit{
+    margin-top: 2rem;
 }
