--- a/src/components/locations/locations.component.html
+++ b/src/components/locations/locations.component.html
@@ -27,8 +27,8 @@
             <img src="assets/locations/desktop/image-map-canada.png" alt="street map of location">
         </div>
     </div>
-    <div class="location-div location-australia">
-        <div class="location-info">
+    <div class="location-div ">
+        <div class="location-info location-australia">
             <h2>Australia</h2>
             <div class="location-office-contact">
                 <div class="location-office">
