--- a/src/components/footer/footer.component.scss
+++ b/src/components/footer/footer.component.scss
@@ -4,14 +4,14 @@ footer{
     background-color: $black;
     width: 100%;
     height: 393px;
-    width: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    margin-top: 18rem;
     position: relative;
+    bottom: 0;
+    left: 0;
+    margin-top: calc(#{$contat-div-height - 100px});
 }
 
 .footer-div{
@@ -165,6 +165,10 @@ footer{
         align-items: center;
         padding: 2rem;
     }
+    
+    .footer-div{
+        width: 90%;
+    }
 
     .info{
         align-items: center !important;
@@ -195,16 +199,17 @@ footer{
 
     footer{
         height: 805px;
-        margin-top: 379px;
         width: 100%;
+        margin-top: 1rem;
     }
 
 
     .contact-div{
         height: 379px;
         width: 90%;
+        display: none;
     }
-    //fix this
+
     .footer-div{
         display: flex;
         flex-direction: column;
