--- a/src/components/design-section/design-section.component.html
+++ b/src/components/design-section/design-section.component.html
@@ -1,17 +1,25 @@
 <section>
-    <div class="design-type web-design">
+
+    <!--Fix the position of the hover in the links-->
+    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="design-type web-design">
+        <div >
+            <div class="hover-div"></div>
+            <h2 class="design-title">WEB DESIGN</h2>
+            <p class="design-paragraph">VIEW PROJECTS <span class="">&gt;</span></p>
+        </div>
+    </a>
+    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="design-type app-design">
+        <div >
+            <div class="hover-div"></div>
+            <h2 class="design-title">APP DESIGN</h2>
+            <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
+        </div>
+    </a>
+    <a [routerLink]="['/designs']" routerLinkActive="router-link-active" class="graphic-design design-type">
+    <div >    
         <div class="hover-div"></div>
-        <h2 class="design-title">WEB DESIGN</h2>
-        <p class="design-paragraph">VIEW PROJECTS <span class="">&gt;</span></p>
+            <h2 class="design-title">GRAPHIC DESIGN</h2>
+            <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>    
     </div>
-    <div class="design-type app-design">
-        <div class="hover-div"></div>
-        <h2 class="design-title">APP DESIGN</h2>
-        <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
-    </div>
-    <div class="design-type graphic-design">
-        <div class="hover-div"></div>
-        <h2 class="design-title">GRAPHIC DESIGN</h2>
-        <p class="design-paragraph">VIEW PROJECTS <span>&gt;</span></p>
-    </div>
+    </a>
 </section>
